--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@
         <title>Resume</title>
     </head>
     <body>
+        <header>
         <nav>
             <img src="Profile.png" alt="profile" style="height: 150px; width: auto; margin: auto; display: block;">
             <h1 style = "text-align: center;">Welcome to Payton's Resume</h1>
@@ -15,6 +16,8 @@
                 <a href="index.html#experience">Experience</a>
                 <a href="index.html#skills">Skills</a></p>
         </nav><br><br>
+        </header>
+        
         <section id="contactinfo">
             <h2>Contact Information</h2>
             <ul type="circle">
@@ -22,6 +25,7 @@
                 <li>Email: long3016@bears.unco.edu</li>
             </ul>
         </section>
+        
         <section id="socials">
             <h2>Social Media</h2>
         </section>
