--- a/resume/index.html
+++ b/resume/index.html
@@ -18,15 +18,21 @@
         </nav><br><br>
         </header>
         
-        <section id="contactinfo">
-            <h2>Contact Information</h2>
-            <ul type="circle">
-                <li>Phone: 303*******</li>
-                <li>Email: long3016@bears.unco.edu</li>
-            </ul>
-        </section>
-        <section id="socials">
-            <h2>Social Media</h2>
-        </section>
+        <div class="float-container">
+            <div class="float-child">
+                <section>
+                    <h2>Contact Information</h2>
+                    <ul type="circle">
+                        <li>Phone: 303*******</li>
+                        <li>Email: long3016@bears.unco.edu</li>
+                    </ul>
+                </section>
+            </div>
+            <div class="float-child">
+                <section>
+                    <h2>Social Media</h2>
+                </section>
+            </div>
+         </div>
     </body>
 </html>
