--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,8 @@
             <img src="Profile.png" alt="profile" style="height: 150px; width: auto; margin: auto; display: block;">
             <h1 style = "text-align: center;">Welcome to Payton's Resume</h1>
             <p style="text-align: center;">Navigate through various experiences and works by Payton Long!</p>
-                <p style= "text-align: center;"><a href="index.html#contactinfo">Contact Information</a>
+                <p style= "text-align: center;">
+                <a href="index.html#contactinfo">Contact Information</a>
                 <a href="index.html#education">Education</a>
                 <a href="index.html#experience">Experience</a>
                 <a href="index.html#skills">Skills</a></p>
@@ -20,7 +21,7 @@
         
         <div class="float-container">
             <div class="float-child">
-                <section>
+                <section id="contactinfo">
                     <h2>Contact Information</h2>
                     <ul>
                         <li>Phone: 303*******</li>
@@ -31,8 +32,28 @@
             <div class="float-child">
                 <section>
                     <h2>Social Media</h2>
+                    <ul>
+                        <li>Instagram: @beannie.sprout</li>
+                        <li>YouTube: @</li>
+                    </ul>
                 </section>
             </div>
          </div>
+         <div class="float-container">
+            <div class="float-child">
+                <section id="education">
+                    <h2>Education</h2>
+                    <ul>
+                        <li>BA in Graphic Design at University of Northern Colorado
+                            <ul>
+                                <li>Typography</li>
+                                <li>Photography</li>
+                                <li>Adobe</li>
+                            </ul></li>
+                        <li>Minor in Digital Marketing at University of Northern Colorado</li>
+                    </ul>
+                </section>
+            </div>
+        </div>
     </body>
 </html>
