--- a/resume/index.html
+++ b/resume/index.html
@@ -39,21 +39,20 @@
                 </section>
             </div>
          </div>
-         <div class="float-container">
-            <div class="float-child">
-                <section id="education">
-                    <h2>Education</h2>
-                    <ul>
-                        <li>BA in Graphic Design at University of Northern Colorado
-                            <ul>
-                                <li>Typography</li>
-                                <li>Photography</li>
-                                <li>Adobe</li>
-                            </ul></li>
-                        <li>Minor in Digital Marketing at University of Northern Colorado</li>
-                    </ul>
-                </section>
-            </div>
+         
+        <div class="float-child">
+            <section id="education" class="large">
+                <h2>Education</h2>
+                <ul>
+                    <li>BA in Graphic Design at University of Northern Colorado
+                        <ul>
+                            <li>Typography</li>
+                            <li>Photography</li>
+                            <li>Adobe</li>
+                        </ul></li>
+                    <li>Minor in Digital Marketing at University of Northern Colorado</li>
+                </ul>
+            </section>
         </div>
     </body>
 </html>
