--- a/resume/index.html
+++ b/resume/index.html
@@ -40,8 +40,8 @@
             </div>
          </div>
          
-        <div class="float-child">
-            <section id="education" class="large">
+         <div>
+            <section id="education">
                 <h2>Education</h2>
                 <ul>
                     <li>BA in Graphic Design at University of Northern Colorado
@@ -50,9 +50,15 @@
                             <li>Photography</li>
                             <li>Adobe</li>
                         </ul></li>
-                    <li>Minor in Digital Marketing at University of Northern Colorado</li>
+                    <li>Minor in Digital Marketing at University of Northern Colorado
+                        <ul>
+                            <li>Marketing Strategies</li>
+                            <li>Brand Identity</li>
+                            <li>Web Design</li>
+                        </ul></li>
                 </ul>
             </section>
         </div>
+        
     </body>
 </html>
