--- a/resume/index.html
+++ b/resume/index.html
@@ -38,7 +38,7 @@
                     </ul>
                 </section>
             </div>
-         </div>
+         </div><br><br>
          
          <div>
             <section id="education">
