--- a/resume/index.html
+++ b/resume/index.html
@@ -38,8 +38,8 @@
                     </ul>
                 </section>
             </div>
-         </div><br><br>
-         
+         </div>
+         <br><br>
          <div>
             <section id="education">
                 <h2>Education</h2>
