--- a/resume/index.html
+++ b/resume/index.html
@@ -59,6 +59,46 @@
                 </ul>
             </section>
         </div>
-        
+        <br><br>
+        <div>
+            <section id="experience">
+                <h2>Experience</h2>
+                    <ul>
+                        <li>UNCO Catering Supervisor in Training (Sep 2022 - Current)</li>
+                        <li>Guild Knight, UNCO Art Guild (Jan 2023 - Current)</li>
+                        <li>Sales Associate Michaels Craft Store (May 2022 - Aug 2022)</li>
+                        <li>Dining Services UNCO (Sep 2021 - Sep 2022)</li>
+                    </ul>
+            </section>
+         </div>
+         <br><br>
+         <div>
+            <section id="skills">
+                <h2>Skills</h2>
+                    <div class="float-container">
+                    <div class="float-child">
+                        <ul>
+                            <li>Qualifications
+                                <ul>
+                                    <li>Patient & Considerate</li>
+                                    <li>Quick Learner</li>
+                                    <li>Responsible</li>
+                                </ul></li>
+                        </ul>
+                      </div>
+                      <div class="float-child">
+                         <ul>
+                             <li>Practical Skills
+                                <ul>
+                                    <li>American Sign Language</li>
+                                    <li>Spanish (some)</li>
+                                    <li>Adobe Programs</li>
+                                    <li>HTML & CSS Coding</li>
+                                </ul></li>
+                          </ul>
+                     </div>
+                 </div>
+            </section>
+        </div>
     </body>
 </html>
