--- a/resume/index.html
+++ b/resume/index.html
@@ -76,8 +76,7 @@
          <div>
             <section id="skills">
                 <h2>Skills</h2>
-                    <div class="float-container">
-                    <div class="float-child">
+                      <div>
                         <ul>
                             <li>Qualifications
                                 <ul>
@@ -87,7 +86,7 @@
                                 </ul></li>
                         </ul>
                       </div>
-                      <div class="float-child">
+                      <div>
                          <ul>
                              <li>Practical Skills
                                 <ul>
@@ -98,7 +97,6 @@
                                 </ul></li>
                           </ul>
                      </div>
-                 </div>
             </section>
         </div>
     </body>
