--- a/resume/index.html
+++ b/resume/index.html
@@ -41,39 +41,44 @@
             </div>
          </div>
          <br><br>
-         <div>
-            <section id="education">
-                <h2>Education</h2>
-                <ul>
-                    <li>BA in Graphic Design at University of Northern Colorado
-                        <ul>
-                            <li>Typography</li>
-                            <li>Photography</li>
-                            <li>Adobe</li>
-                        </ul></li>
-                    <li>Minor in Digital Marketing at University of Northern Colorado
-                        <ul>
-                            <li>Marketing Strategies</li>
-                            <li>Brand Identity</li>
-                            <li>Web Design</li>
-                        </ul></li>
-                </ul>
-            </section>
-        </div>
-        <br><br>
-        <div>
-            <section id="experience">
-                <h2>Experience</h2>
+            <div class="float-container">
+            <div class="float-child">
+                <section id="education">
+                    <h2>Education</h2>
                     <ul>
-                        <li>UNCO Catering Supervisor in Training (Sep 2022 - Current)</li>
-                        <li>Guild Knight, UNCO Art Guild (Jan 2023 - Current)</li>
-                        <li>Sales Associate Michaels Craft Store (May 2022 - Aug 2022)</li>
-                        <li>Dining Services UNCO (Sep 2021 - Sep 2022)</li>
+                        <li>BA in Graphic Design at University of Northern Colorado
+                            <ul>
+                                <li>Typography</li>
+                                <li>Photography</li>
+                                <li>Adobe</li>
+                            </ul></li>
+                        <li>Minor in Digital Marketing at University of Northern Colorado
+                            <ul>
+                                <li>Marketing Strategies</li>
+                                <li>Brand Identity</li>
+                                <li>Web Design</li>
+                            </ul></li>
                     </ul>
-            </section>
-         </div>
+                </section>
+            </div>
+            </div>
+        <br><br>
+            <div class="float-container">
+            <div class="float-child">
+                <section id="experience">
+                    <h2>Experience</h2>
+                        <ul>
+                            <li>UNCO Catering Supervisor in Training (Sep 2022 - Current)</li>
+                            <li>Guild Knight, UNCO Art Guild (Jan 2023 - Current)</li>
+                            <li>Sales Associate Michaels Craft Store (May 2022 - Aug 2022)</li>
+                            <li>Dining Services UNCO (Sep 2021 - Sep 2022)</li>
+                        </ul>
+                </section>
+             </div>
+             </div>
          <br><br>
-         <div>
+         <div class="float-container">
+         <div class="float-child">
             <section id="skills">
                 <h2>Skills</h2>
                       <div>
@@ -98,6 +103,7 @@
                           </ul>
                      </div>
             </section>
+        </div>
         </div>
     </body>
 </html>
