--- a/resume/index.html
+++ b/resume/index.html
@@ -31,6 +31,11 @@
                 </section>
             </div>
             <div class="float-child">
+            <img src="https://i.pinimg.com/236x/09/bd/f9/09bdf9abbe100a62065a883bffe4044e.jpg" alt=Profile2"
+            </div>
+        </div>
+        <div class="float-container">
+            <div class="float-child">
                 <section>
                     <h2>Social Media</h2>
                     <ul>
@@ -38,6 +43,9 @@
                         <li>YouTube: @</li>
                     </ul>
                 </section>
+            </div>
+            <div class="float-child">
+            <img src="https://i.pinimg.com/564x/9d/ad/53/9dad5342d865805f3f3391bab8584a7d.jpg" alt=Profile3"
             </div>
          </div>
          <br><br>
