--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@
                 </section>
             </div>
             <div class="float-child">
-            <img src="https://i.pinimg.com/236x/09/bd/f9/09bdf9abbe100a62065a883bffe4044e.jpg" alt=Profile2"
+            <img src="https://i.pinimg.com/236x/09/bd/f9/09bdf9abbe100a62065a883bffe4044e.jpg" alt=Profile2" style="height: 150px; width: auto; margin: auto; display: block;">
             </div>
         </div>
         <div class="float-container">
@@ -45,7 +45,7 @@
                 </section>
             </div>
             <div class="float-child">
-            <img src="https://i.pinimg.com/564x/9d/ad/53/9dad5342d865805f3f3391bab8584a7d.jpg" alt=Profile3"
+            <img src="https://i.pinimg.com/564x/9d/ad/53/9dad5342d865805f3f3391bab8584a7d.jpg" alt=Profile3" style="height: 150px; width: auto; margin: auto; display: block;">
             </div>
          </div>
          <br><br>
