--- a/resume/index.html
+++ b/resume/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="float-container">
             <div class="float-child">
-                <section>
+                <section id="socials">
                     <h2>Social Media</h2>
                     <ul>
                         <li>Instagram: @beannie.sprout</li>
