--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@
                 </section>
             </div>
             <div class="float-child">
-            <img src="profile2.png" alt=Profile2" style="height: 300px; width: auto; margin: auto; display: block;">
+            <img src="profile2.png" alt="Profile2" style="height: 300px; width: auto; margin: auto; display: block;">
             </div>
         </div>
         <div class="float-container">
@@ -45,7 +45,7 @@
                 </section>
             </div>
             <div class="float-child">
-            <img src="profile3.png" alt=Profile3" style="height: 250px; width: auto; margin: auto; display: block;">
+            <img src="profile3.png" alt="Profile3" style="height: 250px; width: auto; margin: auto; display: block;">
             </div>
          </div>
          <br><br>
@@ -112,6 +112,7 @@
                      </div>
             </section>
         </div>
-        </div>
+        </div><br><br>
+        <p style="text-align: center;">Thank you for visiting my page! Please email me for any questions or clarification!</p>
     </body>
 </html>
