--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
             <meta charset="UTF-8">
             <title>Index</title>
-            <link rel="stylesheet" href="css/main.css">
+            <link rel="stylesheet" href="css/css main.css">
       </head>
       <body>
           <div><h1>Welcome!</h1></div>
