--- a/BACS200.html
+++ b/BACS200.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>BACS200</title>
         <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial scale=1">
     <style>
     img {
           max-width: 50%;
