--- a/educate.html
+++ b/educate.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Educate</title>
         <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
         <p> Links to Page Chapters
