--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <meta charset="UTF-8">
             <title>Index</title>
             <link rel="stylesheet" href="css/css main.css">
+            <meta name="viewport" content="width=device-width, initial scale=1">
       </head>
       <body>
           <div><h1>Welcome!</h1></div>
