--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Test</title>
         <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
       <div><h1>Testing Page</h1></div>
