--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
             <meta charset="UTF-8">
             <title>Index</title>
-            <link rel="stylesheet" href="css/css main.css">
+            <link rel="stylesheet" href="css main/main.css">
             <meta name="viewport" content="width=device-width, initial scale=1">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
       </head>
