--- a/marketing/index.html
+++ b/marketing/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>UNCO Art Guild</title>
-        <link href="./css/guild.css" rel="stylesheet" type="text/css" media="1"></link>
+        <link rel="stylesheet" href="./css/guild.css" type="text/css"></link>
         <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
