--- a/marketing/index.html
+++ b/marketing/index.html
@@ -9,7 +9,12 @@
     <body>
         <img src="./photos/artguildcrest.png" alt="Art Guild Crest">
         <h1>University of Northern Colorado Art Guild</h1>
-        <h3>A Guild that empowers young artists with education, opportunity, and community.</h3>
-        <p>Paragraph text</p>
+        <h3>A Guild that empowers young artists with education, opportunity, and community.</h3><br>
+        <ul>
+            <li><a class="active" a href="index.html">Home</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="officers.html">Officers</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
     </body>
 </html>
