--- a/marketing/index.html
+++ b/marketing/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
-        <img src="./photos/artguildcrest.png" alt="Art Guild Crest">
+        <img src="./photos/artguildcrest.png" alt="Art Guild Crest" class="center">
         <h1>University of Northern Colorado Art Guild</h1>
         <h3>A Guild that empowers young artists with education, opportunity, and community.</h3><br>
         <ul>
