--- a/marketing/index.html
+++ b/marketing/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
-        <img src="./photos/artguildcrest.png" alt="Art Guild Crest" class="center">
+        <img src="./photos/guildcrest.png" alt="Art Guild Crest" class="center" style="height: 250px; width: auto;">
         <h1>University of Northern Colorado Art Guild</h1>
         <h3>A Guild that empowers young artists with education, opportunity, and community.</h3><br>
         <ul>
@@ -16,5 +16,6 @@
             <li><a href="officers.html">Officers</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
+        <h3>NOTICE: Final Meeting April 24th in Crabbe Hall @5:30pm!</h3>
     </body>
 </html>
