--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -15,5 +15,6 @@
             <li><a href="about.html">About</a></li>
         </ul><br>
         <h3>Meet the Officers!</h3>
+        <img src=>
     </body>
 </html>
