--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -15,6 +15,6 @@
             <li><a href="about.html">About</a></li>
         </ul><br>
         <h3>Meet the Officers!</h3>
-        <img src=>
+        <img src="photos/august.png" alt="Penguin Profile Picture" width="80" class="photos">
     </body>
 </html>
