--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -15,6 +15,13 @@
             <li><a href="about.html">About</a></li>
         </ul><br>
         <h3>Meet the Officers!</h3>
-        <img src="photos/august.png" alt="Penguin Profile Picture" width="80" class="photos">
+        <div class="container">
+            <div class="image">
+                <img src="photos/august.png" alt="Penguin Profile Picture" width="80" class="photos">
+            </div>
+            <div class="text">
+                <h2>August Myers</h2>
+            </div>
+        </div>
     </body>
 </html>
