--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -21,6 +21,8 @@
             </div>
             <div class="text">
                 <h2>August Myers</h2>
+                <p>Pronouns: he/him/ & they/them</p>
+                
             </div>
         </div>
     </body>
