--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -19,11 +19,17 @@
             <div class="image">
                 <img src="photos/august.png" alt="Penguin Profile Picture" width="80" class="photos">
             </div>
-            <div class="text">
+            <div class="profile">
                 <h2>August Myers</h2>
                 <p>Pronouns: he/him/ & they/them</p>
-                
             </div>
+            <div class=image>    
+                <img src="photos/instagram.png" alt="Instagram" class="socials">
+             </div>
         </div>
+        <div class=about>
+            <p>August is a graduating senior who majored in Studio Art. From working with textiles and linoleum, their work shows a wide range of knowledge and experience!</p>
+        </div>
+
     </body>
 </html>
