--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -23,13 +23,12 @@
                 <h2>August Myers</h2>
                 <p>Pronouns: he/him/ & they/them</p>
             </div>
-            <div class=image>    
-                <img src="photos/instagram.png" alt="Instagram" class="socials">
-             </div>
         </div>
         <div class=about>
-            <p>August is a graduating senior who majored in Studio Art. From working with textiles and linoleum, their work shows a wide range of knowledge and experience!</p>
-        </div>
-
+            <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px;">
+            <p style="margin-top: 0%;">August is a graduating senior who majored in Studio Art. From working with textiles and linoleum, their work shows a wide range of knowledge and experience! August was one of the original founders of the guild and we are excited to see where they go as they become a Mage!</p>
+            <a href="https://www.instagram.com/augustmossatelier/"><img src="photos/instagram.png" alt="Instagram" class="socials"></a>
+            <a href="https://augustmyers.wixsite.com/portfolio"><img src="photos/portfolio.png" alt="Portfolio" class="socials"></a>
+        </div>    
     </body>
 </html>
