--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -17,7 +17,7 @@
         <h3>Meet the Officers!</h3>
         <div class="container">
             <div class="image">
-                <img src="photos/august.png" alt="Penguin Profile Picture" width="80" class="photos">
+                <img src="photos/august.png" alt="Penguin Profile Picture" class="photos">
             </div>
             <div class="profile">
                 <h2>August Myers</h2>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class=about>
-            <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px;">
+            <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px; padding-top: 0%;">
             <p style="margin-top: 0%;">August is a graduating senior who majored in Studio Art. From working with textiles and linoleum, their work shows a wide range of knowledge and experience! August was one of the original founders of the guild and we are excited to see where they go as they become a Mage!</p>
             <a href="https://www.instagram.com/augustmossatelier/"><img src="photos/instagram.png" alt="Instagram" class="socials"></a>
             <a href="https://augustmyers.wixsite.com/portfolio"><img src="photos/portfolio.png" alt="Portfolio" class="socials"></a>
