--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -26,9 +26,54 @@
         </div>
         <div class=about>
             <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px; padding-top: 0%;">
-            <p style="margin-top: 0%;">August is a graduating senior who majored in Studio Art. From working with textiles and linoleum, their work shows a wide range of knowledge and experience! August was one of the original founders of the guild and we are excited to see where they go as they become a Mage!</p>
+            <p style="margin-top: 0%;">August is a graduating senior who majored in Studio Art. From working with textiles and linoleum, their work shows a wide range of knowledge and experience! With this experience they are an aspiring tattoo artist (or soon to be)! August was one of the original founders of the guild and we are excited to see where they go as they become a Mage!</p>
             <a href="https://www.instagram.com/augustmossatelier/"><img src="photos/instagram.png" alt="Instagram" class="socials"></a>
             <a href="https://augustmyers.wixsite.com/portfolio"><img src="photos/portfolio.png" alt="Portfolio" class="socials"></a>
-        </div>    
+        </div>
+        <div class="container">
+            <div class="image">
+                <img src="photos/sasha.png" alt="Profile Picture" class="photos">
+            </div>
+            <div class="profile">
+                <h2>Sasha Krause</h2>
+                <p>Pronouns: they/them</p>
+            </div>
+        </div>
+        <div class=about>
+            <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px; padding-top: 0%;">
+            <p style="margin-top: 0%;">Sasha is one of our guilds graphic design majors, with expertise in design our guild has never looked better! They have been practicing with Adobe Illustrator and Photoshop for over 7 years and with Adobe InDesign for 2 years. Sasha has utitlized their work in various programs, one notable one being The Center for Women's and Gender Equality at UNCO.</p>
+            <a href="https://www.instagram.com/raynesthings/"><img src="photos/instagram.png" alt="Instagram" class="socials"></a>
+            <a href="https://raynesthings.myportfolio.com/"><img src="photos/portfolio.png" alt="Portfolio" class="socials"></a>
+        </div>
+        <div class="container">
+            <div class="image">
+                <img src="photos/teadora.png" alt="Profile Picture" class="photos">
+            </div>
+            <div class="profile">
+                <h2>Teadora Ruiz</h2>
+                <p>Pronouns: they/them</p>
+            </div>
+        </div>
+        <div class=about>
+            <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px; padding-top: 0%;">
+            <p style="margin-top: 0%;">Teadora is a co-founder of UNCO's art guild and is currently pursuing a bachelor's in K-12 Art Education. Using art as a way to portray and honor their experiences, they wish to explore that further by being that influence for other artists particulary ones in K-12 education. Looking to provide a safe and loving space for all, they hope to see new faces join the guild.</p>
+            <a href="https://www.instagram.com/louisaruiz_/"><img src="photos/instagram.png" alt="Instagram" class="socials"></a>
+            <a href="https://campsite.bio/teadoraruiz"><img src="photos/portfolio.png" alt="Portfolio" class="socials"></a>
+        </div>
+        <div class="container">
+            <div class="image">
+                <img src="photos/bean.png" alt="Profile Picture" class="photos">
+            </div>
+            <div class="profile">
+                <h2>Payton Long</h2>
+                <p>Pronouns: they/them</p>
+            </div>
+        </div>
+        <div class=about>
+            <img src="photos/border.png" alt="border" style="border: none; display: block; margin-left: auto; margin-right: auto; padding-bottom: 0px; padding-top: 0%;">
+            <p style="margin-top: 0%;">Payton is an aspiring graphic designer with a love for illustration and story telling. As an upcoming junior at UNCO, they are the guild's newest knight! Payton hopes to continue building a community and experience with their fellow artists while also exploring their own passions for sharing the love and art of storytelling.</p>
+            <a href="https://www.instagram.com/beannie.sprout/"><img src="photos/instagram.png" alt="Instagram" class="socials"></a>
+            <a href="https://prlong17.wixsite.com/portfolio"><img src="photos/portfolio.png" alt="Portfolio" class="socials"></a>
+        </div>
     </body>
 </html>
