--- a/marketing/about.html
+++ b/marketing/about.html
@@ -13,6 +13,7 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="officers.html">Officers</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="https://unco.campuslabs.com/engage/organization/uncoartguild">BearCave</a></li>
         </ul><br>
         <h3>About UNCO Art Guild</h3>
     </body>
