--- a/marketing/index.html
+++ b/marketing/index.html
@@ -14,8 +14,26 @@
             <li><a class="active" a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="officers.html">Officers</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="https://unco.campuslabs.com/engage/organization/uncoartguild">Bear Cave</a></li>
         </ul>
         <h3>NOTICE: Final Meeting April 24th in Crabbe Hall @5:30pm!</h3>
+        <div class="container">
+            <div class="image">
+                <img src="photos/UNCO final meeting.png" alt="Final Meeting 4/27" class="photos">
+            </div>
+            <div class="profile">
+                <h2>Village Potluck</h2>
+                <p>As a final farewell to the guild, let's go out with a potluck!</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="image">
+                <img src="photos/UNCO art guild Halloween.png" alt="Final Meeting 4/27" class="photos">
+            </div>
+            <div class="profile">
+                <h2>Halloween Party</h2>
+                <p>Happy Halloween! Artisans were called upon to present their best costumes, who do you think had the best one?</p>
+            </div>
+        </div>
     </body>
 </html>
