--- a/marketing/index.html
+++ b/marketing/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="container">
             <div class="image">
-                <img src="photos/halloween.png" alt="Final Meeting 4/27" class="photos">
+                <img src="photos/halloween.png" alt="Halloween 10/31" class="photos">
             </div>
             <div class="profile">
                 <h2>Halloween Party</h2>
