--- a/marketing/index.html
+++ b/marketing/index.html
@@ -16,7 +16,8 @@
             <li><a href="officers.html">Officers</a></li>
             <li><a href="https://unco.campuslabs.com/engage/organization/uncoartguild">Bear Cave</a></li>
         </ul>
-        <h3>NOTICE: Final Meeting April 24th in Crabbe Hall @5:30pm!</h3>
+        <h2>NOTICE: Final Meeting April 24th in Crabbe Hall @5:30pm!</h2>
+        <br><br><h2>Past Meetings!</h2>
         <div class="container">
             <div class="image">
                 <img src="photos/UNCO final meeting.png" alt="Final Meeting 4/27" class="photos">
