--- a/marketing/events.html
+++ b/marketing/events.html
@@ -17,22 +17,22 @@
         <h3>EVENTS</h3>
         <img src="photos/stressless.png" alt="Stress Less Poster" class="center" style="height: 250px; width: auto;">
         <h3>The end of semester have you feeling stressed and overwhelmed? Take some time for intentional destressing at our Stress Less Fest!</h3>
-        <ul>About The Event
+        <ol type="I">About The Event
             <li>Sunday, April 30 2023 at 11:00 AM MDT to Sunday, April 30 2023 at 1:00 PM MDT</li>
-            <ul>Activities
-                <li> Therapy Dogs 11a-1p</li>
+            <ol type="I">Activities
+                <li>Therapy Dogs 11a-1p</li>
                 <li>Embroidery Workshop 11a-12p</li>
                 <li>Mindfulness Workshop 11a-12p</li>
                 <li>Zumba 12-1p</li>
                 <li> Paint Pour Workshop 12-1p</li>
                 <li>Switch & board games 11a-1p</li>
-            </ul>
-            <ul>Make Your Own:
+            </ol>
+            <ol type="I">Make Your Own:
                 <li>Glitter Jars</li>
                 <li>Stress Balls</li>
                 <li>Friendship Bracelets</li>
-            </ul>
-        </ul>
+            </ol>
+        </ol>
         <h3>In collaboration with: Office of Health Promotion, UNC Campus Recreation, & University Program Council</h3>
     </body>
 </html>
