--- a/marketing/events.html
+++ b/marketing/events.html
@@ -19,19 +19,23 @@
         <h3>The end of semester have you feeling stressed and overwhelmed? Take some time for intentional destressing at our Stress Less Fest!</h3>
         <ol type="I">About The Event
             <li>Sunday, April 30 2023 at 11:00 AM MDT to Sunday, April 30 2023 at 1:00 PM MDT</li>
-            <ol type="I">Activities
-                <li>Therapy Dogs 11a-1p</li>
-                <li>Embroidery Workshop 11a-12p</li>
-                <li>Mindfulness Workshop 11a-12p</li>
-                <li>Zumba 12-1p</li>
-                <li> Paint Pour Workshop 12-1p</li>
-                <li>Switch & board games 11a-1p</li>
-            </ol>
-            <ol type="I">Make Your Own:
-                <li>Glitter Jars</li>
-                <li>Stress Balls</li>
-                <li>Friendship Bracelets</li>
-            </ol>
+            <li>Activities
+                <ol  type="I">
+                    <li>Therapy Dogs 11a-1p</li>
+                    <li>Embroidery Workshop 11a-12p</li>
+                    <li>Mindfulness Workshop 11a-12p</li>
+                    <li>Zumba 12-1p</li>
+                    <li> Paint Pour Workshop 12-1p</li>
+                    <li>Switch & board games 11a-1p</li>
+                </ol>
+            </li>
+            <li>Make Your Own:
+                <ol type="I">
+                    <li>Glitter Jars</li>
+                    <li>Stress Balls</li>
+                    <li>Friendship Bracelets</li>
+                </ol>
+            </li>
         </ol>
         <h3>In collaboration with: Office of Health Promotion, UNC Campus Recreation, & University Program Council</h3>
     </body>
