--- a/marketing/index.html
+++ b/marketing/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <img src="./photos/guildcrest.png" alt="Art Guild Crest" class="center" style="height: 250px; width: auto;">
-        <h1>University of Northern Colorado Art Guild</h1>
+        <h1>UNCO Art Guild</h1>
         <h3>A Guild that empowers young artists with education, opportunity, and community.</h3><br>
         <ul>
             <li><a class="active" a href="index.html">Home</a></li>
