--- a/marketing/events.html
+++ b/marketing/events.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
-        <h1>University of Northern Colorado Art Guild</h1>
+        <h1>UNCO Art Guild</h1>
          <ul>
             <li><a class="active" a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
