--- a/marketing/officers.html
+++ b/marketing/officers.html
@@ -14,7 +14,7 @@
             <li><a href="officers.html">Officers</a></li>
             <li><a href="about.html">About</a></li>
         </ul><br>
-        <h3>Meet the Officers!</h3>
+        <h3>Meet the Knights!</h3>
         <div class="container">
             <div class="image">
                 <img src="photos/august.png" alt="Penguin Profile Picture" class="photos">
