--- a/marketing/events.html
+++ b/marketing/events.html
@@ -16,9 +16,10 @@
         </ul><br>
         <h3>EVENTS</h3>
         <section>
-            <img src="photos/stressless.png" alt="Stress Less Poster" style="height: 250px; width: auto;">
+            <img src="photos/stressless.png" alt="Stress Less Poster">
             <h3>The end of semester have you feeling stressed and overwhelmed? Take some time for intentional destressing at our Stress Less Fest!</h3>
-            <ol type="I">About The Event
+            <p>About The Event</p>
+            <ol type="I">
                 <li>Sunday, April 30 2023 at 11:00 AM MDT to Sunday, April 30 2023 at 1:00 PM MDT</li>
                 <li>Activities
                     <ol  type="I">
