--- a/marketing/index.html
+++ b/marketing/index.html
@@ -16,7 +16,7 @@
             <li><a href="officers.html">Officers</a></li>
             <li><a href="https://unco.campuslabs.com/engage/organization/uncoartguild">Bear Cave</a></li>
         </ul>
-        <h2>NOTICE: Final Meeting April 24th in Crabbe Hall @5:30pm!</h2>
+        <h2><strong>NOTICE:</strong> Final Meeting April 24th in Crabbe Hall @5:30pm!</h2>
         <h2>Past Meetings!</h2>
         <div class="container">
             <div class="image">
