--- a/marketing/events.html
+++ b/marketing/events.html
@@ -16,7 +16,7 @@
         </ul><br>
         <h3>EVENTS</h3>
         <section>
-            <img src="photos/stressless.png" alt="Stress Less Poster" style="height: 250px; width: auto;>
+            <img src="photos/stressless.png" alt="Stress Less Poster" class="center" style="height: 250px; width: auto;">
             <h3>The end of semester have you feeling stressed and overwhelmed? Take some time for intentional destressing at our Stress Less Fest!</h3>
             <p>About The Event</p>
             <ol type="I">
