--- a/marketing/index.html
+++ b/marketing/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>UNCO Art Guild</title>
-        <link rel="stylesheet" href="./css/guild.css" type="text/css"></link>
+        <link rel="stylesheet" href="./css/guild.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
@@ -11,7 +11,7 @@
         <h1>UNCO Art Guild</h1>
         <h3>A guild that empowers young artists with education, opportunity, and community!</h3><br>
         <ul>
-            <li><a class="active" a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="officers.html">Officers</a></li>
             <li><a href="https://unco.campuslabs.com/engage/organization/uncoartguild">Bear Cave</a></li>
@@ -20,7 +20,7 @@
         <h2>Past Meetings!</h2>
         <div class="container">
             <div class="image">
-                <img src="photos/UNCO final meeting.png" alt="Final Meeting 4/27" class="photos">
+                <img src="photos/final.png" alt="Final Meeting 4/27" class="photos">
             </div>
             <div class="profile">
                 <h2>Village Potluck</h2>
