--- a/marketing/events.html
+++ b/marketing/events.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>UNCO Art Guild</title>
-        <link rel="stylesheet" href="./css/guild.css" type="text/css"></link>
+        <link rel="stylesheet" href="./css/guild.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial scale=1">
     </head>
     <body>
         <h1>UNCO Art Guild</h1>
          <ul>
-            <li><a class="active" a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="officers.html">Officers</a></li>
             <li><a href="https://unco.campuslabs.com/engage/organization/uncoartguild">Bear Cave</a></li>
