--- a/marketing/events.html
+++ b/marketing/events.html
@@ -23,12 +23,12 @@
                 <li>Sunday, April 30 2023 at 11:00 AM MDT to Sunday, April 30 2023 at 1:00 PM MDT</li>
                 <li>Activities
                     <ol>
-                        <li>Therapy Dogs 11a-1p</li>
-                        <li>Embroidery Workshop 11a-12p</li>
-                        <li>Mindfulness Workshop 11a-12p</li>
-                        <li>Zumba 12-1p</li>
-                        <li> Paint Pour Workshop 12-1p</li>
-                        <li>Switch & board games 11a-1p</li>
+                        <li>Therapy Dogs <em>11a-1p</em></li>
+                        <li>Embroidery Workshop <em>11a-12p</em></li>
+                        <li>Mindfulness Workshop <em>11a-12p</em></li>
+                        <li>Zumba <em>12-1p</em></li>
+                        <li>Paint Pour Workshop <em>12-1p</em></li>
+                        <li>Switch & board games <em>11a-1p</em></li>
                     </ol>
                 </li>
                 <li>Make Your Own:
